# HighPerformanceUploadServer

./: .gitignore  .gitmodules  CLIENT_SERVICE_COLLABORATION.md  README.md
LocalUploadServer/: CMakeLists.txt  Deploy-UploadService.ps1  LocalUploadService_Architecture.md  ServiceManager.bat  localserver.md
LocalUploadServer/FlatBuffer/: upload_file_info.fbs  upload_file_info_generated.h
LocalUploadServer/config/: server_config.toml  service.json
LocalUploadServer/include/: log_headers.h  stl_headers.h
LocalUploadServer/include/AsioLoopbackIpcServer/: Lusp_AsioIpcSender.h  Lusp_AsioLoopbackIpcServer.h
LocalUploadServer/src/: log_headers.cpp  main.cpp
LocalUploadServer/src/AsioLoopbackIpcServer/: Lusp_AsioIpcSender.cpp  Lusp_AsioLoopbackIpcServer.cpp
client/: .clangd  ARCHITECTURE_COMPLIANCE_ANALYSIS.md  Architecture.drawio  BUILD_OPTIMIZATION_SUCCESS.md  BUILD_SUCCESS.md  CLIENT_RUNTIME_ARCHITECTURE_ANALYSIS.md  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_vcpkg_optimized.txt  CMakeUserPresets.json  FIRST_LAYER_COMPLETENESS_ANALYSIS.md  LUSP_ADAPTATION_SUCCESS.md  QUEUE_CLEANUP_REPORT.md  README.md  TOML_OPTIMIZATION_SUMMARY.md  client.md  client_architecture.drawio  compile_commands.json  download-testfile.py  localserver.md  optimize_build.ps1  test_encoding.cpp
client/FlatBuffer/: upload_file_info.fbs  upload_file_info_generated.h
client/config/: default_test.toml  test_config.toml  upload_client.toml  upload_client_complete.toml
client/docs/: 01-核心设计理念.md  02-架构分层与职责.md  03-核心组件设计.md  04-核心工作流程与性能.md  05-架构总结与亮点.md  06-真实代码实现示例.md  CLient.md  MessageQueue-Architecture.md  README.md  TODO.MD
client/examples/: ConfigManagerExample.cpp  magic_enum_config_example.cpp  minimal_upload_example.cpp  minimal_useage.md  spdlog_example.cpp  toml_integration_example.cpp
client/include/: FileInfoQtAdapter.h  FileInfoWrapper.h  FileListWidget.h  MainWindow.h  log_headers.h  magic_enum_integration.h  spdlog_integration.h
client/include/AsioLoopbackIpcClient/: Lusp_AsioLoopbackIpcClient.h
client/include/Config/: ClientConfigManager.h
client/include/FileInfo/: FileInfo.h  FileInfoQtAdapter.h
client/include/MessageQueue/: ConnectionMonitor.h  PersistentMessageQueue.h
client/include/NotificationService/: Lusp_SyncFilesNotificationService.h
client/include/SyncUploadQueue/: Lusp_SyncUploadQueue.h
client/include/ThreadSafeRowLockQueue/: ThreadSafeRowLockQueue.hpp
client/include/log/: LoggerWrapper.h
client/include/utils/: EnumConvert.hpp  SystemErrorUtil.h
client/proto/: upload_file_info.proto
client/src/: FileInfoWrapper.cpp  FileListWidget.cpp  MainWindow.cpp  log_headers.cpp  main.cpp
client/src/AsioLoopbackIpcClient/: Lusp_AsioLoopbackIpcClient.cpp
client/src/Config/: ClientConfigManager.cpp
client/src/FileInfo/: FileInfo.cpp
client/src/MessageQueue/: ConnectionMonitor.cpp  PersistentMessageQueue.cpp
client/src/NotificationService/: Lusp_SyncFilesNotificationService.cpp
client/src/SyncUploadQueue/: Lusp_SyncUploadQueue.cpp  Lusp_SyncUploadQueuePrivate.cpp  Lusp_SyncUploadQueuePrivate.h
client/test/: ConfigManager.md  EnumConv.md
client/tools/: Build-WithTOML.ps1  toml_validator.py
client/ui/: MainWindow.ui
doc/: README.md
doc/modules/: 01-sdk-layer.md  02-notification-layer.md  03-local-service-layer.md  iconv.md
